--- a/employees.html
+++ b/employees.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Employee Management</title>
   <link href="style.css" rel="stylesheet">
+  <script src="util.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -75,66 +76,121 @@
     </div>
   </div>
   <script>
-    
+  function updateTotalSalary() {
+    const basic = parseFloat(document.getElementById('basic').value) || 0;
+    const hra = parseFloat(document.getElementById('hra').value) || 0;
+    const conveyance = parseFloat(document.getElementById('conveyance').value) || 0;
+    const others = parseFloat(document.getElementById('others').value) || 0;
+    const total = (basic + hra + conveyance + others).toFixed(2);
+    document.getElementById('totalSalaryDisplay').textContent = `₹${total}`;
+  }
 
-    function updateTotalSalary() {
-      const basic = parseFloat(document.getElementById('basic').value) || 0;
-      const hra = parseFloat(document.getElementById('hra').value) || 0;
-      const conveyance = parseFloat(document.getElementById('conveyance').value) || 0;
-      const others = parseFloat(document.getElementById('others').value) || 0;
-      const total = (basic + hra + conveyance + others).toFixed(2);
-      document.getElementById('totalSalaryDisplay').textContent = `₹${total}`;
+  function loadEmployees() {
+    const tbody = document.getElementById('employeeList').querySelector('tbody');
+    let employees = JSON.parse(localStorage.getItem('employees')) || [];
+    employees = employees.filter(emp => emp && typeof emp === 'object' && emp.name && !isNaN(emp.basic) && !isNaN(emp.hra) && !isNaN(emp.conveyance) && !isNaN(emp.others) && !isNaN(emp.totalSalary));
+    localStorage.setItem('employees', JSON.stringify(employees));
+    tbody.innerHTML = '';
+
+    if (employees.length === 0) {
+      tbody.innerHTML = '<tr><td colspan="7" class="no-data">No employees added yet.</td></tr>';
+      return;
     }
 
-    function loadEmployees() {
-      const tbody = document.getElementById('employeeList').querySelector('tbody');
-      let employees = JSON.parse(localStorage.getItem('employees')) || [];
-      employees = employees.filter(emp => emp && typeof emp === 'object' && emp.name && !isNaN(emp.basic) && !isNaN(emp.hra) && !isNaN(emp.conveyance) && !isNaN(emp.others) && !isNaN(emp.totalSalary));
-      localStorage.setItem('employees', JSON.stringify(employees));
-      tbody.innerHTML = '';
+    employees.forEach((emp, index) => {
+      const tr = document.createElement('tr');
+      tr.className = index % 2 === 0 ? 'even-row' : 'odd-row';
+      tr.innerHTML = `
+        <td>${emp.name}</td>
+        <td>₹${emp.basic.toFixed(2)}</td>
+        <td>₹${emp.hra.toFixed(2)}</td>
+        <td>₹${emp.conveyance.toFixed(2)}</td>
+        <td>₹${emp.others.toFixed(2)}</td>
+        <td>₹${emp.totalSalary.toFixed(2)}</td>
+        <td>
+          <button class="btn btn-sm btn-warning" onclick="editEmployee('${emp.name}')">Update</button>
+          <button class="btn btn-sm btn-danger" onclick="deleteEmployee('${emp.name}')">Delete</button>
+        </td>
+      `;
+      tbody.appendChild(tr);
+    });
+  }
 
-      if (employees.length === 0) {
-        tbody.innerHTML = '<tr><td colspan="7" class="no-data">No employees added yet.</td></tr>';
-        return;
-      }
+  function addEmployee() {
+    const name = document.getElementById('employeeName').value.trim();
+    const basic = parseFloat(document.getElementById('basic').value);
+    const hra = parseFloat(document.getElementById('hra').value);
+    const conveyance = parseFloat(document.getElementById('conveyance').value);
+    const others = parseFloat(document.getElementById('others').value);
+    const errorMessage = document.getElementById('errorMessage');
 
-      employees.forEach((emp, index) => {
-        const tr = document.createElement('tr');
-        tr.className = index % 2 === 0 ? 'even-row' : 'odd-row';
-        tr.innerHTML = `
-          <td>${emp.name}</td>
-          <td>₹${emp.basic.toFixed(2)}</td>
-          <td>₹${emp.hra.toFixed(2)}</td>
-          <td>₹${emp.conveyance.toFixed(2)}</td>
-          <td>₹${emp.others.toFixed(2)}</td>
-          <td>₹${emp.totalSalary.toFixed(2)}</td>
-          <td><button class="btn btn-sm btn-danger" onclick="deleteEmployee('${emp.name}')">Delete</button></td>
-        `;
-        tbody.appendChild(tr);
-      });
+    if (!name || isNaN(basic) || isNaN(hra) || isNaN(conveyance) || isNaN(others) || basic < 0 || hra < 0 || conveyance < 0 || others < 0) {
+      errorMessage.textContent = 'Please enter valid name and salary components.';
+      return;
     }
 
-    function addEmployee() {
-      const name = document.getElementById('employeeName').value.trim();
-      const basic = parseFloat(document.getElementById('basic').value);
-      const hra = parseFloat(document.getElementById('hra').value);
-      const conveyance = parseFloat(document.getElementById('conveyance').value);
-      const others = parseFloat(document.getElementById('others').value);
-      const errorMessage = document.getElementById('errorMessage');
+    let employees = JSON.parse(localStorage.getItem('employees')) || [];
+    if (employees.find(emp => emp.name === name)) {
+      errorMessage.textContent = 'Employee already exists.';
+      return;
+    }
 
-      if (!name || isNaN(basic) || isNaN(hra) || isNaN(conveyance) || isNaN(others) || basic < 0 || hra < 0 || conveyance < 0 || others < 0) {
-        errorMessage.textContent = 'Please enter valid name and salary components.';
-        return;
-      }
+    const totalSalary = basic + hra + conveyance + others;
+    employees.push({ name, basic, hra, conveyance, others, totalSalary });
+    localStorage.setItem('employees', JSON.stringify(employees));
+    document.getElementById('employeeName').value = '';
+    document.getElementById('basic').value = '';
+    document.getElementById('hra').value = '';
+    document.getElementById('conveyance').value = '';
+    document.getElementById('others').value = '';
+    document.getElementById('totalSalaryDisplay').textContent = '₹0';
+    errorMessage.textContent = '';
+    loadEmployees();
+  }
 
-      let employees = JSON.parse(localStorage.getItem('employees')) || [];
-      if (employees.find(emp => emp.name === name)) {
-        errorMessage.textContent = 'Employee already exists.';
-        return;
-      }
+  function deleteEmployee(name) {
+    if (!confirm(`Delete ${name}?`)) return;
+    let employees = JSON.parse(localStorage.getItem('employees')) || [];
+    employees = employees.filter(emp => emp.name !== name);
+    localStorage.setItem('employees', JSON.stringify(employees));
+    loadEmployees();
+  }
 
+  function editEmployee(name) {
+    let employees = JSON.parse(localStorage.getItem('employees')) || [];
+    const employee = employees.find(emp => emp.name === name);
+    if (employee) {
+      document.getElementById('employeeName').value = employee.name;
+      document.getElementById('basic').value = employee.basic;
+      document.getElementById('hra').value = employee.hra;
+      document.getElementById('conveyance').value = employee.conveyance;
+      document.getElementById('others').value = employee.others;
+      updateTotalSalary();
+      // Add a save button or modify addEmployee to handle updates
+      document.querySelector('button[onclick="addEmployee()"]').onclick = function() {
+        saveEmployee(name);
+      };
+    }
+  }
+
+  function saveEmployee(originalName) {
+    const name = document.getElementById('employeeName').value.trim();
+    const basic = parseFloat(document.getElementById('basic').value);
+    const hra = parseFloat(document.getElementById('hra').value);
+    const conveyance = parseFloat(document.getElementById('conveyance').value);
+    const others = parseFloat(document.getElementById('others').value);
+    const errorMessage = document.getElementById('errorMessage');
+
+    if (!name || isNaN(basic) || isNaN(hra) || isNaN(conveyance) || isNaN(others) || basic < 0 || hra < 0 || conveyance < 0 || others < 0) {
+      errorMessage.textContent = 'Please enter valid name and salary components.';
+      return;
+    }
+
+    let employees = JSON.parse(localStorage.getItem('employees')) || [];
+    const index = employees.findIndex(emp => emp.name === originalName);
+    if (index !== -1) {
       const totalSalary = basic + hra + conveyance + others;
-      employees.push({ name, basic, hra, conveyance, others, totalSalary });
+      employees[index] = { name, basic, hra, conveyance, others, totalSalary };
       localStorage.setItem('employees', JSON.stringify(employees));
       document.getElementById('employeeName').value = '';
       document.getElementById('basic').value = '';
@@ -144,22 +200,17 @@
       document.getElementById('totalSalaryDisplay').textContent = '₹0';
       errorMessage.textContent = '';
       loadEmployees();
+      // Restore the original addEmployee function
+      document.querySelector('button[onclick="addEmployee()"]').onclick = addEmployee;
     }
+  }
 
-    function deleteEmployee(name) {
-      if (!confirm(`Delete ${name}?`)) return;
-      let employees = JSON.parse(localStorage.getItem('employees')) || [];
-      employees = employees.filter(emp => emp.name !== name);
-      localStorage.setItem('employees', JSON.stringify(employees));
-      loadEmployees();
-    }
-
-    window.onload = () => {
-      loadEmployees();
-      const salaryInputs = document.querySelectorAll('.salary-input');
-      salaryInputs.forEach(input => input.addEventListener('input', updateTotalSalary));
-    };
-  </script>
+  window.onload = () => {
+    loadEmployees();
+    const salaryInputs = document.querySelectorAll('.salary-input');
+    salaryInputs.forEach(input => input.addEventListener('input', updateTotalSalary));
+  };
+</script>
   <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
   import {
