--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="util.js"></script>
   <script src="main.js" ></script>
+  <link href="style.css" rel="stylesheet">
+  
   <link rel="stylesheet" href="main.css">
   
 </head>
@@ -61,6 +63,13 @@
         </table>
       </div>
     </div>
+    <div class="container mt-4">
+  <h2>Cloud Sync</h2>
+  <div class="d-flex gap-2">
+    <button onclick="syncLocalToFirebase()" class="btn btn-success">Upload Local ➜ Cloud</button>
+    <button onclick="syncFirebaseToLocal()" class="btn btn-primary">Download Cloud ➜ Local</button>
+  </div>
+</div>
     <div class="card hours-section">
       <h3>Manage Hours</h3>
       <div class="input-group mb-3">
@@ -136,7 +145,6 @@
     showToast("✔️ Local data synced to cloud!");
   }
 
-  // NOTE: syncFirebaseToLocal function was missing, assuming it's needed for context.
   async function syncFirebaseToLocal() {
     const snap = await get(ref(db, 'sync'));
     if (snap.exists()) {
@@ -145,6 +153,8 @@
         localStorage.setItem(key, JSON.stringify(data[key]));
       });
       showToast("✔️ Cloud data loaded to local!");
+      // Optional:
+      // location.reload();
     } else {
       showToast("⚠️ No cloud data found", "error");
     }
@@ -152,6 +162,21 @@
 
   window.syncLocalToFirebase = syncLocalToFirebase;
   window.syncFirebaseToLocal = syncFirebaseToLocal;
+
+  function showToast(message, type = "success") {
+  const toast = document.createElement("div");
+  toast.className = `custom-toast ${type}`;
+  toast.textContent = message;
+  document.body.appendChild(toast);
+
+  setTimeout(() => {
+    toast.classList.add("show");
+    setTimeout(() => {
+      toast.classList.remove("show");
+      setTimeout(() => document.body.removeChild(toast), 300);
+    }, 3000); // Toast visible for 3 seconds
+  }, 100);
+}
 </script>
 
 </body>
