--- a/main.html
+++ b/main.html
@@ -48,9 +48,9 @@
     <div class="card">
       <h2>Attendance for Selected Month</h2>
       <div class="input-group">
-        <input style="min-width: 250px;" id="attendanceMonth" type="month" class="form-control">
+        <input style="min-width: 100px;" id="attendanceMonth" type="month" class="form-control">
         <button onclick="saveAttendance()" id="saveButton" class="btn btn-primary">Save</button>
-        <button onclick="resetAttendance()" id="resetButton" class="btn btn-danger">Reset</button>
+       
       </div>
       <div class="attendance-grid">
         <table class="attendance-table" id="attendanceTable">
@@ -64,13 +64,13 @@
     <div class="card hours-section">
       <h3>Manage Hours</h3>
       <div class="input-group mb-3">
-        <select style="min-width: 150px;  max-width: 150px;"id="employeeSelect" class="form-select">
+        <select style="min-width: 100px;" id="employeeSelect" class="form-select">
           <option value="">Select Employee</option>
         </select>
-        <input style="min-width: 150px;  max-width: 150px;" id="hoursDateInput" type="date" class="form-control">
-        <input style="min-width: 150px;  max-width: 150px;"id="extraHoursInput" type="number" class="form-control" placeholder="Extra Hours" step="0.5" min="0">
-        <input style="min-width: 150px; max-width: 150px;"  id="lateHoursInput" type="number" class="form-control" placeholder="Late Hours" step="0.5" min="0">
-        <button onclick="submitHours()" class="btn btn-primary">Submit</button>
+        <input style="min-width: 125px;" id="hoursDateInput" type="date" class="form-control"><br><br>
+        <input style="min-width: 100px;" id="extraHoursInput" type="number" class="form-control" placeholder="Extra Hours" step="0.5" min="0"><br><br>
+        <input style="min-width: 100px;" id="lateHoursInput" type="number" class="form-control" placeholder="Late Hours" step="0.5" min="0">
+        <button  onclick="submitHours()" class="btn btn-primary">Submit</button>
       </div>
     </div>
     <div class="card hours-section" id="hoursSummaryCard">
