--- a/report.html
+++ b/report.html
@@ -1,171 +1,317 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Monthly Report</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="util.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Employee Salaries</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    .checkbox-cell {
-      padding: 0;
-    }
-
-    .checkbox-cell input {
-      margin: 0;
-      vertical-align: middle;
-    }
-
-    .toast {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #28a745;
-      color: #ffffff;
-      padding: 10px 20px;
-      border-radius: 5px;
-      font-size: 0.9rem;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      z-index: 1000;
-    }
-
-    .toast.show {
-      opacity: 1;
-    }
-
-    .salary-slip {
-      display: none;
-      margin-top: 20px;
-      padding: 20px;
-      border: 1px solid #ccc;
-      background-color: #f9f9f9;
-      font-family: Arial, sans-serif;
-    }
-
-    .salary-slip h2 {
-      text-align: center;
-      color: #333;
-    }
-
-    .salary-slip p {
-      margin: 5px 0;
-    }
-
-    .salary-slip table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-
-    .salary-slip td,
-    .salary-slip th {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-
-    .salary-slip th {
-      background-color: #f2f2f2;
-    }
-
-    @media print {
-      body * {
-        visibility: hidden;
-      }
-
-      .salary-slip,
-      .salary-slip * {
-        visibility: visible;
-      }
-
-      .salary-slip {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-      }
-
-      .no-print {
-        display: none;
-      }
+    .table-container { padding: 20px; }
+    th, td { text-align: center; }
+    select.shift-select {
+      width: 90px;
+      font-size: 0.9em;
     }
   </style>
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Jalaram Tools</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="main.html">Attendance</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="employees.html">Employees</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="report.html">Monthly Report</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Loan&Adv.html">Loan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="settings.html">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-danger" href="index.html">Logout</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="main.html">Attendance</a></li>
+          <li class="nav-item"><a class="nav-link" href="employees.html">Employees</a></li>
+          <li class="nav-item"><a class="nav-link" href="report.html">Monthly Report</a></li>
+          <li class="nav-item"><a class="nav-link" href="Loan&Adv.html">Loan</a></li>
+          <li class="nav-item"><a class="nav-link" href="settings.html">Settings</a></li>
+          <li class="nav-item"><a class="nav-link text-danger" href="index.html">Logout</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="container">
-    <h1>Monthly Report</h1>
-    <div class="card p-3">
-      <h2>Select Month</h2>
-      <div class="input-group mb-3">
-        <input type="month" id="reportMonth" class="form-control">
-        <button onclick="generateReport()" class="btn btn-primary">Generate</button>
-        <button onclick="downloadExcel()" class="btn btn-success">Download Excel</button>
-        <button onclick="saveMonthlyReport()" class="btn btn-secondary">Save Report</button>
-      </div>
-      <div id="monthInfo" class="mt-3"></div>
-      <table id="reportTable" class="table table-bordered mt-3">
-        <thead>
-          <tr>
-            <th>Employee</th>
-            <th>Basic (₹)</th>
-            <th>HRA (₹)</th>
-            <th>Conveyance (₹)</th>
-            <th>Others (₹)</th>
-            <th>Total Salary (₹)</th>
-            <th>Present</th>
-            <th>Absent</th>
-            <th>Advance (₹)</th>
-            <th>Total Loan (₹)</th>
-            <th>Loan Repaid (₹)</th>
-            <th>Remaining Loan (₹)</th>
-            <th>Loan EMI (₹)</th>
-            <th>Days</th>
-            <th>Hours</th>
-            <th>Net Salary (₹)</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+
+  <div class="table-container">
+    <h1>Employee Salaries</h1>
+
+    <div class="mb-3">
+      <label for="reportMonth" class="form-label">Select Month</label>
+      <input type="month" id="reportMonth" class="form-control" />
     </div>
-    <div id="salarySlipContainer" class="salary-slip no-print"></div>
+    <div class="mb-3">
+      <button id="generateSummary" class="btn btn-primary">Generate Summary</button>
+      <div class="d-flex gap-2">
+    <button onclick="syncLocalToFirebase()" class="btn btn-success">Final Save</button>
+  
+    </div>
+
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Employee Name</th><th>Shift</th><th>Basic (₹)</th><th>HRA (₹)</th><th>Conveyance (₹)</th><th>Others (₹)</th>
+          <th>Total Salary (₹)</th><th>Days Present</th><th>Days Absent</th><th>Advance Given (₹)</th>
+          <th>Loan Given (₹)</th><th>Loan Repaid (₹)</th><th>Loan Left (₹)</th><th>Days Adjustment</th>
+          <th>Hours Adjustment</th><th>Net Salary (₹)</th><th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="salaryTableBody"></tbody>
+    </table>
   </div>
+  
+</div>
+  </script>
+  <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'951a89091acca6ef',t:'MTc1MDI0NzA3Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+  import {
+    getDatabase, ref, set, get
+  } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyBpWA8BuNZ8-Yh6eBtyCMsu9GkQO7v0kn4",
+    authDomain: "jalaram-7bbac.firebaseapp.com",
+    projectId: "jalaram-7bbac",
+    storageBucket: "jalaram-7bbac.firebasestorage.app",
+    messagingSenderId: "865915981684",
+    appId: "1:865915981684:web:2d7156ee1ee725773f6621"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  function showToast(message, type = "success") {
+    const toast = document.createElement("div");
+    toast.className = `custom-toast ${type}`;
+    toast.textContent = message;
+    document.body.appendChild(toast);
+
+    setTimeout(() => {
+      toast.classList.add("show");
+      setTimeout(() => {
+        toast.classList.remove("show");
+        setTimeout(() => document.body.removeChild(toast), 300);
+      }, 3000);
+    }, 100);
+  }
+
+  async function syncLocalToFirebase() {
+    const allKeys = Object.keys(localStorage);
+    for (const key of allKeys) {
+      try {
+        const value = localStorage.getItem(key);
+        const parsed = JSON.parse(value);
+        await set(ref(db, `sync/${key}`), parsed);
+      } catch {
+        await set(ref(db, `sync/${key}`), localStorage.getItem(key));
+      }
+    }
+    showToast("✔️ Local data synced to cloud!");
+  }
+
+  async function syncFirebaseToLocal() {
+    const snap = await get(ref(db, 'sync'));
+    if (snap.exists()) {
+      const data = snap.val();
+      Object.keys(data).forEach(key => {
+        localStorage.setItem(key, JSON.stringify(data[key]));
+      });
+      showToast("✔️ Cloud data loaded to local!");
+      // Optional:
+      // location.reload();
+    } else {
+      showToast("⚠️ No cloud data found", "error");
+    }
+  }
+
+  window.syncLocalToFirebase = syncLocalToFirebase;
+  window.syncFirebaseToLocal = syncFirebaseToLocal;
+</script>
+
+  <script>
+    const employees = JSON.parse(localStorage.getItem('employees')) || [];
+    const attendance = JSON.parse(localStorage.getItem('attendance')) || {};
+    const advances = JSON.parse(localStorage.getItem('advances')) || {};
+    const loans = JSON.parse(localStorage.getItem('loans')) || {};
+    const extraHours = JSON.parse(localStorage.getItem('extraHours')) || {};
+    const lateHours = JSON.parse(localStorage.getItem('lateHours')) || {};
+
+    const shiftData = {}; // stores each employee's selected shift
+
+    function displaySalaries(monthKey) {
+      const tbody = document.getElementById('salaryTableBody');
+      tbody.innerHTML = '';
+      if (!monthKey) return;
+
+      const year = parseInt(monthKey.substring(0, 4));
+      const month = parseInt(monthKey.substring(5, 7)) - 1;
+      const daysInMonth = new Date(year, month + 1, 0).getDate();
+
+      employees.forEach(emp => {
+        if (emp && emp.name) {
+          const shiftHours = shiftData[emp.name] || 12; // default to 12h
+
+          const basic = parseFloat(emp.basic) || 0;
+          const hra = parseFloat(emp.hra) || 0;
+          const conveyance = parseFloat(emp.conveyance) || 0;
+          const others = parseFloat(emp.others) || 0;
+          const totalSalary = parseFloat(emp.totalSalary) || (basic + hra + conveyance + others);
+
+          let presentDays = 0, absentDays = 0;
+          const attendedDays = new Set();
+          for (let day = 1; day <= daysInMonth; day++) {
+            const date = `${monthKey}-${String(day).padStart(2, '0')}`;
+            if (attendance[date]?.[emp.name] !== undefined) {
+              attendedDays.add(day);
+              attendance[date][emp.name] === true ? presentDays++ : absentDays++;
+            }
+          }
+          if (attendedDays.size === 0) absentDays = daysInMonth;
+
+          const advanceList = advances[emp.name] || [];
+          const totalAdvance = advanceList.reduce((sum, adv) => sum + (adv.amount || 0), 0);
+
+          const loanList = loans[emp.name] || [];
+          let totalLoanGiven = 0, totalLoanRepaid = 0, totalLoanLeft = 0;
+          loanList.forEach(l => {
+            if (l.amount) totalLoanGiven += l.amount;
+            if (l.amount && l.remaining !== undefined) totalLoanRepaid += (l.amount - l.remaining);
+            if (l.remaining) totalLoanLeft += l.remaining;
+          });
+
+          let totalExtraHours = 0, totalLateHours = 0;
+          let hasHoursData = false;
+          for (let day = 1; day <= daysInMonth; day++) {
+            const date = `${monthKey}-${String(day).padStart(2, '0')}`;
+            const extra = extraHours[date]?.[emp.name] || 0;
+            const late = lateHours[date]?.[emp.name] || 0;
+            if (extra > 0 || late > 0) hasHoursData = true;
+            totalExtraHours += extra;
+            totalLateHours += late;
+          }
+
+          const netHours = hasHoursData ? totalExtraHours - totalLateHours : 0;
+          const fullDays = hasHoursData ? Math.floor(netHours / shiftHours) : 0;
+          const remainingHours = hasHoursData ? netHours % shiftHours : 0;
+          const daysDisplay = fullDays === 0 ? '0d' : `${fullDays > 0 ? '+' : ''}${fullDays}d`;
+          const hoursDisplay = remainingHours === 0 ? '0h' : `${remainingHours > 0 ? '+' : ''}${remainingHours.toFixed(1)}h`;
+
+          const perDaySalary = totalSalary / daysInMonth;
+          const absenceDeduction = perDaySalary * absentDays;
+          const daysAdjustmentAmount = fullDays * perDaySalary;
+          const hourlyRate = perDaySalary / shiftHours;
+          const initialSalary = totalSalary - absenceDeduction - totalAdvance + daysAdjustmentAmount;
+          const hoursAdjustment = hasHoursData ? remainingHours * hourlyRate : 0;
+          const netSalary = initialSalary;
+
+          const empDetails = {
+            basic, hra, conveyance, others, totalSalary,
+            presentDays, absentDays, totalAdvance,
+            totalLoanGiven, totalLoanRepaid, totalLoanLeft,
+            daysDisplay, hoursDisplay, netSalary, hoursAdjustment,
+            shiftHours
+          };
+
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${emp.name}</td>
+            <td>
+              <select class="shift-select" onchange="changeShift('${emp.name}', this.value)">
+                <option value="8" ${shiftHours === 8 ? 'selected' : ''}>8h</option>
+                <option value="12" ${shiftHours === 12 ? 'selected' : ''}>12h</option>
+              </select>
+            </td>
+            <td>₹${Math.round(basic)}</td>
+            <td>₹${Math.round(hra)}</td>
+            <td>₹${Math.round(conveyance)}</td>
+            <td>₹${Math.round(others)}</td>
+            <td>₹${Math.round(totalSalary)}</td>
+            <td>${presentDays}</td>
+            <td>${absentDays}</td>
+            <td>₹${Math.round(totalAdvance)}</td>
+            <td>₹${Math.round(totalLoanGiven)}</td>
+            <td>₹${Math.round(totalLoanRepaid)}</td>
+            <td>₹${Math.round(totalLoanLeft)}</td>
+            <td>${daysDisplay}</td>
+            <td class="hours-cell">
+              <input type="checkbox" data-emp="${emp.name}" onchange="updateNetSalary(this)"> Include ${hoursDisplay}
+            </td>
+            
+            <td class="net-salary" data-emp="${emp.name}" data-initial="${initialSalary.toFixed(2)}" data-hours="${hoursAdjustment.toFixed(2)}">₹${Math.round(netSalary)}</td>
+            <td><button class="btn btn-info btn-sm" onclick='generateSlip(${JSON.stringify(emp.name)}, "${monthKey}", ${JSON.stringify(empDetails)})'>Generate Slip</button></td>
+          `;
+          tbody.appendChild(row);
+        }
+      });
+    }
+
+    function updateNetSalary(checkbox) {
+      const tr = checkbox.closest('tr');
+      const empName = checkbox.getAttribute('data-emp');
+      const initialSalary = parseFloat(tr.querySelector('.net-salary').dataset.initial);
+      const hoursAdjustment = parseFloat(tr.querySelector('.net-salary').dataset.hours);
+      const netSalaryCell = tr.querySelector('.net-salary');
+
+      const netSalary = checkbox.checked ? initialSalary + hoursAdjustment : initialSalary;
+      netSalaryCell.textContent = `₹${Math.round(netSalary)}`;
+    }
+
+    function changeShift(empName, value) {
+      shiftData[empName] = parseInt(value);
+      const selectedMonth = document.getElementById('reportMonth').value;
+      displaySalaries(selectedMonth);
+    }
+
+    function generateSlip(empName, monthKey, details) {
+      const formattedMonth = new Date(monthKey + '-01').toLocaleString('default', { month: 'long', year: 'numeric' });
+      const checkbox = document.querySelector(`input[type="checkbox"][data-emp="${empName}"]`);
+      const includeHours = checkbox && checkbox.checked;
+      const hoursAdj = parseFloat(details.hoursAdjustment) || 0;
+      const updatedNetSalary = includeHours ? parseFloat(details.netSalary) + hoursAdj : parseFloat(details.netSalary);
+
+      let slipHTML = `
+        <h2>Salary Slip - ${empName}</h2>
+        <p><strong>Month:</strong> ${formattedMonth}</p>
+        <p><strong>Shift:</strong> ${details.shiftHours} Hour Shift</p>
+        <table>
+          <tr><th>Description</th><th>Amount (₹)</th></tr>
+          <tr><td>Basic</td><td>₹${Math.round(details.basic)}</td></tr>
+          <tr><td>HRA</td><td>₹${Math.round(details.hra)}</td></tr>
+          <tr><td>Conveyance</td><td>₹${Math.round(details.conveyance)}</td></tr>
+          <tr><td>Others</td><td>₹${Math.round(details.others)}</td></tr>
+          <tr><td><strong>Total Salary</strong></td><td><strong>₹${Math.round(details.totalSalary)}</strong></td></tr>
+          <tr><td>Present Days</td><td>${details.presentDays}</td></tr>
+          <tr><td>Absent Days</td><td>${details.absentDays}</td></tr>
+          <tr><td>Advance Given</td><td>₹${Math.round(details.totalAdvance)}</td></tr>
+          <tr><td>Loan Given</td><td>₹${Math.round(details.totalLoanGiven)}</td></tr>
+          <tr><td>Loan Repaid</td><td>₹${Math.round(details.totalLoanRepaid)}</td></tr>
+          <tr><td>Loan Left</td><td>₹${Math.round(details.totalLoanLeft)}</td></tr>
+          <tr><td>Days Adjustment</td><td>${details.daysDisplay}</td></tr>`;
+
+      if (includeHours) {
+        slipHTML += `<tr><td>Hours Adjustment</td><td>${details.hoursDisplay}</td></tr>`;
+      }
+
+      slipHTML += `
+          <tr style="background-color: #e8faff;"><td><strong>Net Salary</strong></td><td><strong>₹${Math.round(updatedNetSalary)}</strong></td></tr>
+        </table>
+      `;
+
+      window.open(
+        `generateSalSlip.html?data=${encodeURIComponent(slipHTML)}&empName=${encodeURIComponent(empName)}&formattedMonth=${encodeURIComponent(formattedMonth)}`,
+        '_blank'
+      );
+    }
+
+    document.getElementById('reportMonth').addEventListener('change', function () {
+      displaySalaries(this.value);
+    });
+
+    window.onload = () => {
+      const today = new Date();
+      const defaultMonth = `${today.getFullYear()}-${String(today.getMonth() + 1).padStart(2, '0')}`;
+      document.getElementById('reportMonth').value = defaultMonth;
+      displaySalaries(defaultMonth);
+    };
+  </script>
 </body>
 </html>
