--- a/Admin.html
+++ b/Admin.html
@@ -82,8 +82,8 @@
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
 
-      if (username === 'Shyaam' && password === 'Jalaram') {
-        window.location.href = 'main.html';
+      if (username === 'Dinesh' && password === 'Jalaram@205') {
+        window.location.href = 'employees.html';
       } else {
         document.getElementById('error-message').textContent = 'Invalid username or password';
       }
