--- a/main.html
+++ b/main.html
@@ -28,16 +28,19 @@
             <a class="nav-link active" href="main.html">Attendance</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="employees.html">Employees</a>
+            <a class="nav-link" href="Admin.html">Employees</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="report.html">Monthly Report</a>
+            <a class="nav-link" href="Admin.html">Monthly Report</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Loan&Adv.html">Loan</a>
+            <a class="nav-link" href="Admin.html">Loan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="settings.html">Settings</a>
+            <a class="nav-link" href="Admin.html">Advance</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Admin.html">Settings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-danger" href="index.html">Logout</a>
@@ -187,6 +190,7 @@
         document.getElementById('syncButton').disabled = false;
       });
     });
+
   </script>
 
 
