--- a/report.html
+++ b/report.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Employee Salaries</title>
+  <script src="util.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     .table-container { padding: 20px; }
@@ -23,7 +24,7 @@
           <li class="nav-item"><a class="nav-link" href="main.html">Attendance</a></li>
           <li class="nav-item"><a class="nav-link" href="employees.html">Employees</a></li>
           <li class="nav-item"><a class="nav-link" href="report.html">Monthly Report</a></li>
-          <li class="nav-item"><a class="nav-link" href="Loan&Adv.html">Loan</a></li>
+          <li class="nav-item"><a class="nav-link" href="Loan.html">Loan</a></li>
           <li class="nav-item"><a class="nav-link" href="settings.html">Settings</a></li>
           <li class="nav-item"><a class="nav-link text-danger" href="index.html">Logout</a></li>
         </ul>
@@ -34,13 +35,11 @@
   <div class="table-container">
     <h1>Employee Salaries</h1>
 
-    <div class="mb-3">
+    <div style="width: 50%; " class="mb-3">
       <label for="reportMonth" class="form-label">Select Month</label>
       <input type="month" id="reportMonth" class="form-control" />
     </div>
-    <div class="mb-3">
-      <button id="generateSummary" class="btn btn-primary">Generate Summary</button>
-      <div class="d-flex gap-2">
+    
     <button onclick="syncLocalToFirebase()" class="btn btn-success">Final Save</button>
   
     </div>
@@ -48,7 +47,7 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>Employee Name</th><th>Shift</th><th>Basic (₹)</th><th>HRA (₹)</th><th>Conveyance (₹)</th><th>Others (₹)</th>
+          <th>S. No.</th><th>Employee Name</th><th>Shift</th><th>Basic (₹)</th><th>HRA (₹)</th><th>Conveyance (₹)</th><th>Others (₹)</th>
           <th>Total Salary (₹)</th><th>Days Present</th><th>Days Absent</th><th>Advance Given (₹)</th>
           <th>Loan Given (₹)</th><th>Loan Repaid (₹)</th><th>Loan Left (₹)</th><th>Days Adjustment</th>
           <th>Hours Adjustment</th><th>Net Salary (₹)</th><th>Action</th>
@@ -213,6 +212,7 @@
 
           const row = document.createElement('tr');
           row.innerHTML = `
+            <td>${tbody.children.length + 1}</td>
             <td>${emp.name}</td>
             <td>
               <select class="shift-select" onchange="changeShift('${emp.name}', this.value)">
@@ -306,6 +306,7 @@
       displaySalaries(this.value);
     });
 
+    
     window.onload = () => {
       const today = new Date();
       const defaultMonth = `${today.getFullYear()}-${String(today.getMonth() + 1).padStart(2, '0')}`;
