--- a/settings.html
+++ b/settings.html
@@ -32,8 +32,12 @@
             <a class="nav-link" href="report.html">Monthly Report</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Loan&Adv.html">Loan</a>
+            <a class="nav-link" href="Loan.html">Loan</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Advance.html">Advance</a>
+          </li>
+         
           <li class="nav-item">
             <a class="nav-link" href="settings.html">Settings</a>
           </li>
