--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
       if (username === 'Shyaam' && password === 'Jalaram') {
         window.location.href = 'main.html';
+      } 
+      if (username === 'Dinesh' && password === 'Jalaram@205') {
+        window.location.href = 'main1.html';
       } else {
         document.getElementById('error-message').textContent = 'Invalid username or password';
       }
