--- a/Loan.html
+++ b/Loan.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Loan Management</title>
   <link href="style.css" rel="stylesheet" />
-  <script src="util.js"></script>
+ 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="main.html">Attendance</a>
+            <a class="nav-link" href="main1.html">Attendance</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="employees.html">Employees</a>
