--- a/settings.html
+++ b/settings.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="main.html">Attendance</a>
+            <a class="nav-link" href="main1.html">Attendance</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="employees.html">Employees</a>
